--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,19 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
       sudo apt update
       sudo apt install -y postgresql-client-13 libpq-dev
+  - name: run-docker-compose
+    init: |
+      docker compose up
+ports:
+  - port: 3000
+    onOpen: open-browser
+    visibility: public
+  - port: 4567
+    visibility: public
+  - port: 5432
+    visibility: public
+  - port: 8000
+    visibility: public
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
