--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,20 @@
+github:
+  prebuilds:
+    # enable for the master/default branch (defaults to true)
+    main: true
+    # enable for all branches in this repo (defaults to false)
+    branches: true
+    # enable for pull requests coming from this repo (defaults to true)
+    pullRequests: true
+    # enable for pull requests coming from forks (defaults to false)
+    pullRequestsFromForks: true
+    # add a "Review in Gitpod" button as a comment to pull requests (defaults to true)
+    addComment: true
+    # add a "Review in Gitpod" button to pull requests (defaults to false)
+    addBadge: false
+    # add a label once the prebuild is ready to pull requests (defaults to false)
+    addLabel: prebuilt-in-gitpod
+
 tasks:
   - name: aws-cli
     env:
@@ -6,17 +23,15 @@ tasks:
       cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
-      sudo ./aws/install
-      cd $THEIA_WORKSPACE_ROOT
-  - name: postgres
-    init: |
-      curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc|sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
-      echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
-      sudo apt update
-      sudo apt install -y postgresql-client-13 libpq-dev
-  - name: run-docker-compose
-    init: |
-      docker compose up
+      gp sync-done installation
+  - init: gp sync-await installation
+    command: sudo ./aws/install && cd $THEIA_WORKSPACE_ROOT
+  # - name: postgres
+  #   init: |
+  #     curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc|sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
+  #     echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
+  #     sudo apt update
+  #     sudo apt install -y postgresql-client-13 libpq-dev
 ports:
   - port: 3000
     onOpen: open-browser
@@ -27,9 +42,12 @@ ports:
     visibility: public
   - port: 8000
     visibility: public
+image:
+  file: .gitpod.dockerfile
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
     - ms-azuretools.vscode-docker
     - eamodio.gitlens
     - ms-python.python
+    - cweijan.vscode-postgresql-client2
