--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      AWS_XRAY_URL: "*4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}*"
+      AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"
     build: ./backend-flask
     ports:
       - "4567:4567"
@@ -57,6 +59,19 @@ services:
     volumes:
       - "./docker/dynamodb:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
+  xray-daemon:
+    image: amazon/aws-xray-daemon
+    environment:
+      - AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      - AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      - AWS_REGION: "ca-central-1"
+    command:
+      - "-o"
+      - "--log-level=debug"
+      - "--bind=xray-daemon:2000"
+    ports:
+      - 2000:2000/udp
+
 networks:
   internal-network:
     driver: bridge
