--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,11 +61,11 @@ services:
       - "./docker/dynamodb:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
   xray-daemon:
-    image: amazon/aws-xray-daemon
+    image: "amazon/aws-xray-daemon"
     environment:
-      - AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
-      - AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
-      - AWS_REGION: "ca-central-1"
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      AWS_REGION: "ca-central-1"
     command:
       - "-o"
       - "--log-level=debug"
